# spike-mind

./: .gitignore  README.md  config.toml  flake.nix  pyproject.toml
docs/: plan.md  references.md  research.md
docs/plans/: 2026-03-29-phase-2-robustness-ble-resilience.md
docs/plans/completed/: 2026-03-29-phase-2-robustness-ble-resilience.md
hub/: main.py
src/spike_mind/: __main__.py  agent.py  cli.py  protocol.py  robot.py  transport.py
tests/: test_ble_reconnect.py  test_integration.py  test_protocol.py  test_robot.py
